test/apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: ingress-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: hashicorp/http-echo
          args:
            - "-text=Hello from app1"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: ingress-demo
spec:
  selector:
    app: app1
  ports:
    - port: 80        # 클러스터 내부에서 보는 포트
      targetPort: 5678 # 컨테이너 포트
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: ingress-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: hashicorp/http-echo
          args:
            - "-text=Hello from app2"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: app2
  namespace: ingress-demo
spec:
  selector:
    app: app2
  ports:
    - port: 80
      targetPort: 5678
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: ingress-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: hashicorp/http-echo
          args:
            - "-text=Hello from admin (this could be admin page)"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: ingress-demo
spec:
  selector:
    app: admin
  ports:
    - port: 80
      targetPort: 5678
