test/ingress-archainia-wildcard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: archainia-wildcard-ingress
  namespace: ingress-demo
  annotations:
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - archainia.app
        - app1.archainia.app
        - app2.archainia.app
        - admin.archainia.app
        - app1.test.archainia.app
      secretName: archainia-wildcard-tls
  rules:
    - host: app1.archainia.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1
                port:
                  number: 80

    - host: app2.archainia.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2
                port:
                  number: 80

    - host: admin.archainia.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin
                port:
                  number: 80
    
    - host: app1.test.archainia.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1
                port:
                  number: 80
