test/ingress-hosts-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-hosts
  namespace: ingress-demo
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-http"
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - app1.archainia.app
        - app2.archainia.app
        - admin.archainia.app
      secretName: archainia-apps-tls   # cert-manager가 이 이름으로 Secret 생성

  rules:
    - host: app1.archainia.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1
                port:
                  number: 80

    - host: app2.archainia.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2
                port:
                  number: 80

    - host: admin.archainia.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin
                port:
                  number: 80
